samples/_failures_safe/1761210205_2dad94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fa3098c.c: In function ‘main’:
./samples/SAFE/__tmp_3fa3098c.c:137:16: error: missing terminating " character
  137 |         printf("
      |                ^
./samples/SAFE/__tmp_3fa3098c.c:137:9: error: expected expression at end of input
  137 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_3fa3098c.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fa3098c.c:137:9: error: expected declaration or statement at end of input
